@@ -12,12 +12,12 @@ $tooltip-color-no: theme('colors.critical.100');
 
 @mixin arrow--top {
   margin-top: $tooltip-arrow-spacing;
-  transform: translateX(-50%);
+  transform: translateX(calc(var(--w-direction-factor) * -50%));
 
   &::before {
     bottom: 100%;
     inset-inline-start: 50%;
-    transform: translateX(-50%);
+    transform: translateX(calc(var(--w-direction-factor) * -50%));
     border-bottom-color: $tooltip-chrome;
   }
 }
